--- a/src/main/resources/openapi/person/person.yaml
+++ b/src/main/resources/openapi/person/person.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.3"
 info:
-  title: Request for tasks
+  title: Request for persons
   version: 1.0.0
   description: OpenAPI Specification for persons
 
@@ -50,6 +50,35 @@ paths:
             application/json:
               schema:
                 $ref: 'model/person_response.json'
+        404:
+          description: Not Found
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+
+  /persons/{personId}/tasks:
+    get:
+      tags:
+        - All Tasks by PersonId
+      description: Получение списка задач для пользователя
+      operationId: get-all-tasks-by-person-id
+      parameters:
+        - name: personId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Идентификатор пользователя
+      responses:
+        200:
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: '../task/model/tasks_response.json'
         404:
           description: Not Found
         400:
