--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.9.1'
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.2.Final'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.assertj:assertj-core:3.22.0'
     testImplementation 'io.rest-assured:rest-assured:5.0.1'
