--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,14 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.9.1'
     implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+    implementation 'org.liquibase:liquibase-core:4.9.0'
+    implementation 'org.postgresql:postgresql:42.2.6'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
